<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#84A9AC"
    tools:context=".temas">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="356dp"
        android:layout_height="141dp"
        android:layout_marginStart="27dp"
        android:layout_marginTop="90dp"
        android:layout_marginEnd="28dp"
        android:layout_marginBottom="20dp"
        android:fontFamily="@font/bowlby_one"
        android:text="@string/escoge_un_tema_para_jugar"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="#050505"
        android:textSize="36sp"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/button3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Escoge un tema para jugar:"
        tools:visibility="visible" />

    <Button
        android:onClick="naturalesClick"
        android:id="@+id/button7"
        android:layout_width="258dp"
        android:layout_height="68dp"
        android:layout_marginStart="76dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="77dp"
        android:layout_marginBottom="80dp"
        android:background="@drawable/boton"
        android:text="@string/c_naturales"
        android:textSize="36sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button6" />

    <Button
        android:onClick="matematicaClick"
        android:id="@+id/button5"
        android:layout_width="259dp"
        android:layout_height="71dp"
        android:layout_marginStart="76dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="76dp"
        android:layout_marginBottom="29dp"
        android:background="@drawable/boton"
        android:text="@string/matem_tica"
        android:textSize="36sp"
        app:layout_constraintBottom_toTopOf="@+id/button6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button3" />

    <Button
        android:onClick="historiaClick"
        android:id="@+id/button6"
        android:layout_width="259dp"
        android:layout_height="71dp"
        android:layout_marginStart="76dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="76dp"
        android:layout_marginBottom="29dp"
        android:background="@drawable/boton"
        android:text="@string/historia"
        android:textSize="36sp"
        app:layout_constraintBottom_toTopOf="@+id/button7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button5" />

    <Button
        android:onClick="lenguajeClick"
        android:id="@+id/button3"
        android:layout_width="259dp"
        android:layout_height="71dp"
        android:layout_marginStart="76dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="76dp"
        android:layout_marginBottom="28dp"
        android:background="@drawable/boton"
        android:text="@string/lenguaje"
        android:textSize="36sp"
        app:layout_constraintBottom_toTopOf="@+id/button5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

</androidx.constraintlayout.widget.ConstraintLayout>